--- a/src/stylesheets/Poema.css
+++ b/src/stylesheets/Poema.css
@@ -1,26 +1,107 @@
-    .poemas-container{
+.poemas-container{
     margin: 0 auto;
     align-items: center;
     justify-content: center;
     width: 300px;
 
 }
-   .titulo ,.poema{
-        text-align: left;
+
+   .titulo ,.poema,.poema-blurred{
+     text-align: left;
 }
-.toggled{
+.btn-toggle-poema{
     margin: 0 auto;
     align-items: center;
     justify-content: center;
+    height: 50px;
     width: 300px;
-    background: linear-gradient(to right, blue, pink);
-   
-}    
-.btn-toggle{
-    background: linear-gradient(to bottom, rgba(51, 46, 46, 0.622),70%,rgba(243, 243, 245, 0));
+    border: none;
+    background: linear-gradient(to bottom, rgba(243, 243, 245, 0), 95%, rgba(238, 193, 57, 0.622));
+    cursor: pointer;
+}
+.btn-toggled-poema{
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to bottom,rgba(243, 243, 245, 0),70%,rgba(238, 193, 57, 0.622));
     border: none;
     width: 300px;
     height: 50px;
     cursor: pointer;
-    background-color: white;
+   
 }
+.fecha-none{
+    display:none;
+}
+.fecha{
+    display:block;
+}
+
+
+.poema-blurred {
+    padding-left: 10px;
+    position: relative;
+    font-size: 16px;
+    line-height: 1.5;
+    z-index: -1;
+}
+
+.poema-blurred::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 40px;
+    /* Ajusta el valor según tus necesidades */
+    background: linear-gradient(transparent, white);
+    filter: blur(5px);
+    /* Ajusta el valor de desenfoque según tus necesidades */
+    pointer-events: none;
+    
+}
+
+.poema{
+    animation-duration: 0.8s;
+    animation-name: dropdown;
+}
+@keyframes dropdown{
+    from {
+        opacity: 0;
+    }
+    to{
+       opacity: 1;
+    }
+}
+
+
+/*body {
+    font-family: Arial, sans-serif;
+    background: #ffffff;
+    padding: 20px;
+}
+
+.blurred-text {
+    filter: blur(3px);
+    transition: filter 0.3s ease;
+}
+
+.hidden-text {
+    display: none;
+    transition: filter 0.3s ease;
+}
+
+#toggleBtn {
+    margin: 20px auto;
+    padding: 10px 20px;
+    border: none;
+    background: linear-gradient(rgba(255, 255, 255, 1) 30%, rgba(255, 165, 0, 1));
+    color: black;
+    cursor: pointer;
+    outline: none;
+    border-radius: 4px;
+    transition: background 0.3s ease;
+}
+
+#toggleBtn:hover {
+    background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 140, 0, 1));*/
