--- a/src/stylesheets/Poema.css
+++ b/src/stylesheets/Poema.css
@@ -1,35 +1,69 @@
 .poemas-container{
+    position: relative;
     margin: 0 auto;
     align-items: center;
     justify-content: center;
-    width: 300px;
+    width: 400px;
+    padding-left: 15px;
 
 }
 
    .titulo ,.poema,.poema-blurred{
      text-align: left;
 }
+
+
+.separador{
+    position: absolute;
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 2px;
+    height: 1px;
+    border: none;
+    background: rgba(238, 193, 57, 0.622);
+    z-index: -1;
+}
+
 .btn-toggle-poema{
     margin: 0 auto;
     align-items: center;
     justify-content: center;
     height: 50px;
-    width: 300px;
+    width: 400px;
     border: none;
     background: linear-gradient(to bottom, rgba(243, 243, 245, 0), 95%, rgba(238, 193, 57, 0.622));
     cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.4s ease-out 0.3s;
 }
-.btn-toggled-poema{
+.btn-toggle-poema:hover {
+    background-color: rgba(238, 193, 57, 0.622);
+}
+
+
+.btn-toggled-poema {
+    background: linear-gradient(to bottom, rgba(243, 243, 245, 0), 70%, rgba(238, 193, 57, 0.622));
     margin: 0 auto;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(to bottom,rgba(243, 243, 245, 0),70%,rgba(238, 193, 57, 0.622));
     border: none;
-    width: 300px;
+    width: 400px;
     height: 50px;
     cursor: pointer;
-   
+    border-radius: 4px;
+    transition: background-color 0.4s ease-out 0.2s;
+
 }
+
+.btn-toggled-poema:hover {
+    background-color: rgba(238, 193, 57, 0.622);
+}
+
+
+
+
+
+
 .fecha-none{
     display:none;
 }
