--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -1,30 +1,27 @@
-.nav-poemas li a{
-    cursor: pointer;
-    padding-right: 5px;
-}
 
-.nav-poemas {
-    display: flex;
-    flex-wrap: wrap;
+
+
+
+@font-face {
+    font-family: Pacifico-Regular;
+    src: url('../fuentes/Pacifico-Regular.ttf');
+}
+.home-container{
     margin: 0 auto;
     align-items: center;
     justify-content: center;
+    width: 75%;
+    height: 500px;
 }
 
-.favouriteAnimation, .todosAnimation {
-    animation-duration: 0.4s;
-    animation-name: slidein;
+
+.bienvenida {
+    font-family: Pacifico-Regular;
+    font-style: oblique;
+    font-weight: 150;
+    font-size: calc(4em + 4vw);
+    background: -webkit-linear-gradient(90deg, rgba(238, 193, 57, 0.938813025210084) 35%, rgba(152, 255, 152, 1) 89%);
+    background: linear-gradient(90deg, rgba(238, 193, 57, 0.938813025210084) 35%, rgba(152, 255, 152, 1) 89%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
-
-@keyframes slidein {
-    from {
-        margin-left: 50%;
-        width: 100%;
-    }
-
-    to {
-        margin-left: 0%;
-        width: 100%;
-    }
-}
-
