--- a/src/stylesheets/Poema.css
+++ b/src/stylesheets/Poema.css
@@ -3,8 +3,9 @@
     margin: 0 auto;
     align-items: center;
     justify-content: center;
-    width: 400px;
+    max-width: 400px;
     padding-left: 15px;
+    padding-right: 15px;
 
 }
 
@@ -15,7 +16,7 @@
 
 .separador{
     position: absolute;
-    width: 100%;
+    width: 92%;
     margin: 0 auto;
     border-radius: 2px;
     height: 1px;
@@ -29,7 +30,7 @@
     align-items: center;
     justify-content: center;
     height: 50px;
-    width: 400px;
+    width: 100%;
     border: none;
     background: linear-gradient(to bottom, rgba(243, 243, 245, 0), 95%, rgba(238, 193, 57, 0.622));
     cursor: pointer;
@@ -47,7 +48,7 @@
     align-items: center;
     justify-content: center;
     border: none;
-    width: 400px;
+    width: 100%;
     height: 50px;
     cursor: pointer;
     border-radius: 4px;
