--- a/src/stylesheets/Poemario.css
+++ b/src/stylesheets/Poemario.css
@@ -1,5 +1,4 @@
 .nav-poemas li a{
-
     text-align: center;
     cursor: pointer;
 }
@@ -13,16 +12,18 @@
     list-style: none;
 }
 .todos:hover{
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     background:rgba(238, 193, 57, 0.622); ;
     color: white;
 }
 .favoritos:hover{
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     background: rgba(152, 255, 152, 0.622);
     color: white;
 }
 
 .nav-poemas {
-background-color: rgb(245, 245, 220);
+    background-color: rgb(245, 245, 220);
     position: sticky;
         top: 0;
         /* Fija el navbar en la parte superior */
@@ -34,7 +35,7 @@ background-color: rgb(245, 245, 220);
     align-items: center;
     justify-content: center;
     width: 100%;
--webkit-box-shadow: -1px 17px 15px -23px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: -1px 17px 15px -23px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: -1px 17px 15px -23px rgba(0, 0, 0, 0.75);
     box-shadow: -1px 17px 15px -23px rgba(0, 0, 0, 0.75);
 }
