--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -40,6 +40,7 @@ body{
 .nav a {
     text-decoration: none;
     color: #fff;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     /* Cambia el color del texto según tus preferencias */
 }
 
