--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -10,7 +10,8 @@ body{
     font-size: 1.6rem;
 }
 .nav {
-    background: linear-gradient(90deg, rgba(238, 193, 57, 0.938813025210084) 35%, rgba(152, 255, 152, 1) 50%);
+   background: rgb(211,202,195);
+    /* background: linear-gradient(90deg, rgba(238, 193, 57, 0.938813025210084) 35%, rgba(152, 255, 152, 1) 50%); */
     /* Cambia el color de fondo  */
     color: #fff;
     /* Cambia el color del texto*/
@@ -20,9 +21,9 @@ body{
     width: 100%;
     z-index: 1000;
     /* Asegura que el navbar esté sobre otros elementos */
-    -webkit-box-shadow: 0px 7px 5px -4px rgba(0, 0, 0, 0.50);
-    -moz-box-shadow: 0px 7px 5px -4px rgba(0, 0, 0, 0.50);
-    box-shadow: 0px 7px 5px -4px rgba(0, 0, 0, 0.50);
+    /* -moz-box-shadow: 0px 7px 5px -4px rgba(0, 0, 0, 0.50); */
+    /* -webkit-box-shadow: 0px 7px 5px -4px rgba(0, 0, 0, 0.50); */
+    /* box-shadow: 0px 7px 5px -4px rgba(0, 0, 0, 0.50); */
 }
 
 .nav ul {
@@ -94,10 +95,10 @@ body{
 }    
 .nav-menu{
     position: fixed;
-    top: 8.4vh;
+    top: 50px;
     right:0;
     width: 50%;
-    height: 93vh;
+    height: 100%;
     background: rgb(238, 193, 57);
     background: linear-gradient(0deg, rgba(238, 193, 57, 0.938813025210084) 38%, rgba(152, 255, 152, 1) 100%);
     flex-direction: column;
