--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -62,6 +62,7 @@ body{
 }
 
 .brand-2{
+    color: rgba(152, 255, 152, 1);
     font-style: oblique;
     font-family: Pacifico-Regular;
     font-weight: 300;
