--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -20,7 +20,7 @@
     /* Ajusta la altura según sea necesario para que coincida con .bienvenida */
     right: 20px;
     /* Ajusta la distancia desde el borde derecho según tus necesidades */
-    transform: translateX(-85%);
+    transform: translateX(-75%);
     /* Mueve el elemento a la derecha de la pantalla */
     z-index: 1;
     /* Ajusta el índice z si es necesario para que esté sobre otros elementos */
@@ -98,7 +98,7 @@
     }
 
     .alan-poetry {
-        width: 55%;
+        width: 65%;
         font-size: calc(36px + 1vw);
         /* Ajusta el valor según tus necesidades */
     }
@@ -123,7 +123,7 @@
     }
 
     .alan-poetry {
-        width: 45%;
+        width: 50%;
         font-size: calc(36px + 1vw);
         /* Ajusta el valor según tus necesidades */
     }
@@ -158,6 +158,9 @@
         width: 45%;
         font-size: calc(32px + 1vw);
         /* Ajusta el valor de font-size según tus necesidades */
+    }
+    .div-circular {
+        transform: translateX(-65%);
     }
     
 }
