--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -10,7 +10,7 @@ body{
     font-size: 1.6rem;
 }
 .nav {
-   background: rgb(211,202,195);
+   background:rgb(190, 201, 190);
     /* background: linear-gradient(90deg, rgba(238, 193, 57, 0.938813025210084) 35%, rgba(152, 255, 152, 1) 50%); */
     /* Cambia el color de fondo  */
     color: #fff;
@@ -25,19 +25,26 @@ body{
     /* -webkit-box-shadow: 0px 7px 5px -4px rgba(0, 0, 0, 0.50); */
     /* box-shadow: 0px 7px 5px -4px rgba(0, 0, 0, 0.50); */
 }
-
+.activo{
+    border-bottom: 4px solid rgba(152, 255, 152, 1);
+}
 .nav ul {
     list-style: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 15px;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .nav li {
     margin: 0 20px;
 }
+.nav-item:hover{
+    border-bottom: 4px solid rgba(152, 255, 152, 1);
+    
 
+}
 .nav a {
     text-decoration: none;
     color: #fff;
