--- a/src/stylesheets/Poemario.css
+++ b/src/stylesheets/Poemario.css
@@ -1,3 +1,9 @@
+.contenedor-poemas{
+    background-color: rgb(223, 238, 223);
+    width: 100%;
+    height: 100%;
+}
+
 .nav-poemas li a{
     text-align: center;
     cursor: pointer;
@@ -18,7 +24,7 @@
 }
 .favoritos:hover{
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-    background: rgba(152, 255, 152, 0.622);
+    background: rgb(152, 255, 152);
     color: white;
 }
 
@@ -28,7 +34,7 @@
         top: 0;
         /* Fija el navbar en la parte superior */
         z-index: 100;
-    padding-top: 56px;
+    padding-top: 54px;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
