--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -47,7 +47,7 @@ body{
 /* } */
 .nav a {
     text-decoration: none;
-    color: #f0eded;
+    color: #f0f0f0fa;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     /* Cambia el color del texto según tus preferencias */
 }
