--- a/src/stylesheets/Poema.css
+++ b/src/stylesheets/Poema.css
@@ -164,12 +164,28 @@
     }
 }
 
-.poema-expanded {
-    height: auto;
-    max-height: none;
-    transition: max-height 0.8s ease-in-out;
+    
+.button_slide {
+    color: black;
+    border: 1px solid rgba(128, 128, 128, 0.596);
+    border-radius: 5px;
+    padding: 18px 26px;
+    margin-bottom: 15px;
+    display: inline-block;
+    font-family: monospace;
+    font-weight: 700;
+    font-size: 14px;
+    cursor: pointer;
+    box-shadow: inset 0 0 0 0 rgba(152, 255, 152, 1);
+    -webkit-transition: ease-out 0.4s;
+    -moz-transition: ease-out 0.4s;
+    transition: ease-out 0.4s;
+    
 }
-
+.slide_down:hover {
+    box-shadow: inset 0 100px 0 0 rgba(152, 255, 152, 1);
+    color: white;
+}
 /*body {
     font-family: Arial, sans-serif;
     background: #ffffff;
