--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -1,144 +1,134 @@
 @font-face {
-    font-family: Pacifico-Regular;
-    src: url('../fuentes/Pacifico-Regular.ttf');
+  font-family: Pacifico-Regular;
+  src: url("../fuentes/Pacifico-Regular.ttf");
 }
 
 .home-container {
-        /* background-image: url(../images/cuaderno2.jpg); */
-        /* background-repeat: no-repeat; */
-        /* background-size: 100% 100%; */
-        background-color: rgb(223, 238, 223);
-
+  /* background-image: url(../images/cuaderno2.jpg); */
+  /* background-repeat: no-repeat; */
+  /* background-size: 100% 100%; */
+  background-color: rgb(223, 238, 223);
 }
 .div-circular {
-    border-radius: 50%;
-    border: 6px dashed rgba(152, 255, 152, 1);
-    height: calc(220px + 1vw);
-    width: calc(220px + 1vw);
-    position: absolute;
-    /* Cambia a posición absoluta */
-    top: 145px;
-    /* Ajusta la altura según sea necesario para que coincida con .bienvenida */
-    right: 20px;
-    /* Ajusta la distancia desde el borde derecho según tus necesidades */
-    transform: translateX(-75%);
-    /* Mueve el elemento a la derecha de la pantalla */
-    z-index: 1;
-    /* Ajusta el índice z si es necesario para que esté sobre otros elementos */
+  border-radius: 50%;
+  border: 6px dashed rgba(152, 255, 152, 1);
+  height: calc(220px + 1vw);
+  width: calc(220px + 1vw);
+  position: absolute;
+  /* Cambia a posición absoluta */
+  top: 145px;
+  /* Ajusta la altura según sea necesario para que coincida con .bienvenida */
+  right: 20px;
+  /* Ajusta la distancia desde el borde derecho según tus necesidades */
+  transform: translateX(-75%);
+  /* Mueve el elemento a la derecha de la pantalla */
+  z-index: 1;
+  /* Ajusta el índice z si es necesario para que esté sobre otros elementos */
 }
-.div-circular img{
-    height: calc(300px + 1vw);
-    width: calc(230px + 1vw);
-    padding-right: 15px;
-    padding-bottom: 35px;
-    margin-top: -50px;
-
+.div-circular img {
+  height: calc(300px + 1vw);
+  width: calc(230px + 1vw);
+  padding-right: 15px;
+  padding-bottom: 35px;
+  margin-top: -50px;
 }
 
 .contenedor-bienvenida {
-    position: relative;
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-    width: 77%;
-    height: 100%;
-    padding-top: 55px;
+  position: relative;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  width: 77%;
+  height: 100%;
+  padding-top: 55px;
 
-    min-height: 620px;
-    max-height: 900px;
-    position: relative;
-    /* Comentarios mantenido */
+  min-height: 620px;
+  max-height: 900px;
+  position: relative;
+  /* Comentarios mantenido */
 }
 
 .bienvenida {
-    
-    text-align: left;
-    padding-top: 80px;
-    font-family: sans-serif;
-    font-style: italic;
-    font-weight: 700;
-    font-size: calc(36px + 1vw);
-    color: rgb(44, 44, 44);
-    /* Comentarios mantenido */
+  text-align: left;
+  padding-top: 80px;
+  font-family: sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  font-size: calc(36px + 1vw);
+  color: rgb(44, 44, 44);
+  /* Comentarios mantenido */
 }
 @media screen and (min-width: 350px) {
+  .bienvenida,
+  .alan,
+  .poetry,
+  .sub-bienvenida {
+    font-size: calc(40px + 1vw);
+  }
 
-    .bienvenida,
-    .alan,
-    .poetry,
-    .sub-bienvenida {
-        font-size: calc(40px + 1vw);
-    }
+  .socials-container {
+    margin-left: 2vw;
+    /* Ajusta el valor según tus necesidades */
+  }
 
-    .socials-container {
-        margin-left: 2vw;
-        /* Ajusta el valor según tus necesidades */
-    }
-
-    .alan-poetry {
-        width: 91%;
-        font-size: calc(36px + 1vw);
-        /* Ajusta el valor según tus necesidades */
-    }
-    
+  .alan-poetry {
+    width: 91%;
+    font-size: calc(36px + 1vw);
+    /* Ajusta el valor según tus necesidades */
+  }
 }
 
 /* Estilos para pantallas más pequeñas (mínimo 480px de ancho) */
 @media screen and (min-width: 480px) {
+  .bienvenida,
+  .alan,
+  .poetry,
+  .sub-bienvenida {
+    font-size: calc(40px + 1vw);
+  }
 
-    .bienvenida,
-    .alan,
-    .poetry,
-    .sub-bienvenida {
-        font-size: calc(40px + 1vw);
-    }
+  .socials-container {
+    margin-left: 2vw;
+    /* Ajusta el valor según tus necesidades */
+  }
 
-    .socials-container {
-        margin-left: 2vw;
-        /* Ajusta el valor según tus necesidades */
-    }
-
-    .alan-poetry {
-        width: 65%;
-        font-size: calc(36px + 1vw);
-        /* Ajusta el valor según tus necesidades */
-    }
-
-
-
+  .alan-poetry {
+    width: 65%;
+    font-size: calc(36px + 1vw);
+    /* Ajusta el valor según tus necesidades */
+  }
 }
 
 /* Estilos adicionales para tamaños de pantalla más grandes */
 @media screen and (min-width: 768px) {
+  .bienvenida,
+  .alan,
+  .poetry,
+  .sub-bienvenida {
+    font-size: calc(46px + 1vw);
+  }
 
-    .bienvenida,
-    .alan,
-    .poetry,
-    .sub-bienvenida {
-        font-size: calc(46px + 1vw);
-    }
+  .socials-container {
+    margin-left: 5vw;
+    /* Ajusta el valor según tus necesidades */
+  }
 
-    .socials-container {
-        margin-left: 5vw;
-        /* Ajusta el valor según tus necesidades */
-    }
-
-    .alan-poetry {
-        width: 50%;
-        font-size: calc(36px + 1vw);
-        /* Ajusta el valor según tus necesidades */
-    }
+  .alan-poetry {
+    width: 50%;
+    font-size: calc(36px + 1vw);
+    /* Ajusta el valor según tus necesidades */
+  }
 }
 @media screen and (min-width: 900px) {
-    .div-circular {
-        transform: translateX(-5%);
-    }
+  .div-circular {
+    transform: translateX(-5%);
+  }
 }
-@media screen  and (max-width: 900px){
-        .div-circular {
-                display: none;
-            }
-        /* .contenedor-bienvenida{
+@media screen and (max-width: 900px) {
+  .div-circular {
+    display: none;
+  }
+  /* .contenedor-bienvenida{
             padding-left: 17%;
         }   
         .alan-poetry{
@@ -151,69 +141,65 @@
 
 /* Estilos adicionales para tamaños de pantalla aún más grandes */
 @media screen and (min-width: 1200px) {
+  .bienvenida,
+  .alan,
+  .poetry,
+  .sub-bienvenida {
+    font-size: calc(58px + 1vw);
+  }
 
-    .bienvenida,
-    .alan,
-    .poetry,
-    .sub-bienvenida {
-        font-size: calc(58px + 1vw);
-    }
+  .socials-container {
+    margin-left: 2.5vw;
+    /* Ajusta el valor según tus necesidades */
+  }
 
-    .socials-container {
-        margin-left: 2.5vw;
-        /* Ajusta el valor según tus necesidades */
-    }
-
-    .alan-poetry {
-        width: 50%;
-        font-size: calc(32px + 1vw);
-        /* Ajusta el valor de font-size según tus necesidades */
-    }
-    .div-circular {
-        transform: translateX(-65%);
-    }
-    
+  .alan-poetry {
+    width: 50%;
+    font-size: calc(32px + 1vw);
+    /* Ajusta el valor de font-size según tus necesidades */
+  }
+  .div-circular {
+    transform: translateX(-65%);
+  }
 }
 
 .alan {
-    text-align: center;
-    font-family: sans-serif;
-    font-style: italic;
-    font-weight: 700;
-    font-size: calc(30px + 1vw);
-    color: white;
-    /* Comentarios mantenido */
+  text-align: center;
+  font-family: sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  font-size: calc(30px + 1vw);
+  color: white;
+  /* Comentarios mantenido */
 }
 
 .poetry {
-    line-height: normal;
-    font-family: Pacifico-Regular;
-    text-align: left;
-    font-style: oblique;
-    font-weight: 500;
-    font-size: calc(24px + 1vw);
-    color: white;
-    /* Comentarios mantenido */
+  line-height: normal;
+  font-family: Pacifico-Regular;
+  text-align: left;
+  font-style: oblique;
+  font-weight: 500;
+  font-size: calc(24px + 1vw);
+  color: white;
+  /* Comentarios mantenido */
 }
 
 .alan-poetry {
-    margin-left: 5px;
-    margin-right: 5px;
-    background: rgba(152, 255, 152, 1);
-    height: 8%;
-    /* Ajusta el valor según tus necesidades */
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    /* Evita que el contenido se desborde */
-    white-space: nowrap;
-    /* Evita el salto de línea en el texto */
-    text-overflow: ellipsis;
-    /* Añade puntos suspensivos si el texto se desborda */
-    /* Comentarios mantenido */
+  margin-left: 5px;
+  margin-right: 5px;
+  background: rgba(152, 255, 152, 1);
+  height: 8%;
+  /* Ajusta el valor según tus necesidades */
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  /* Evita que el contenido se desborde */
+  white-space: nowrap;
+  /* Evita el salto de línea en el texto */
+  text-overflow: ellipsis;
+  /* Añade puntos suspensivos si el texto se desborda */
+  /* Comentarios mantenido */
 }
-
-
 
 /* .contenedor-bienvenida::before {
     content: "";
@@ -230,43 +216,37 @@
 } */
 
 .socials-contenedor {
-    padding-left: 15%;
-    float:left;
-    /* Comentarios mantenido */
+  padding-left: 15%;
+  float: left;
+  /* Comentarios mantenido */
 }
 
 .socials {
-    padding-top: 25px;
-    margin-right: 25px;
-    margin-left: 25px;
-    /* Comentarios mantenido */
+  padding-top: 25px;
+  margin-right: 25px;
+  margin-left: 25px;
+  /* Comentarios mantenido */
 }
 
-.socials img{
-    height: 40px;
-    width: 40px;
-    -webkit-box-shadow: -1px 17px 16px -18px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: -1px 17px 16px -18px rgba(0, 0, 0, 0.75);
-    box-shadow: -1px 17px 16px -18px rgba(0, 0, 0, 0.75);
-    /* Comentarios mantenido */
-}
-
-.socials img:hover{
-    height: 55px;
-    width: 55px;
-    /* Comentarios mantenido */
+.socials img {
+  height: 40px;
+  width: 40px;
+  -webkit-box-shadow: -1px 17px 16px -18px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 17px 16px -18px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 17px 16px -18px rgba(0, 0, 0, 0.75);
+  /* Comentarios mantenido */
 }
 
 .sub-bienvenida {
-    padding-left: 15px;
-    padding-right: 5px;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    color: rgb(44, 44, 44);
-    font-family: sans-serif;
-    font-weight: 700;
-    font-size: calc(13px + 1vw);
-    font-style:italic;
-    text-align: left;
-    /* Comentarios mantenido */
+  padding-left: 15px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  color: rgb(44, 44, 44);
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: calc(13px + 1vw);
+  font-style: italic;
+  text-align: left;
+  /* Comentarios mantenido */
 }
