--- a/src/stylesheets/Aboutme.css
+++ b/src/stylesheets/Aboutme.css
@@ -8,7 +8,7 @@
 
 .aboutme-content {
   display: flex;
-  background: rgb(248, 243, 228);
+  background: rgba(152, 255, 152, 1);
   align-items: center;
   margin: 0 auto;
   margin-bottom: 6rem;
@@ -35,8 +35,21 @@
 }
 .about-alan {
   text-align: center;
-  font-family: sans-serif;
-  font-style: italic;
-  font-weight: 700;
+  font-family: Vegur, "PT Sans", Verdana, sans-serif;
+  font-weight: 600;
+
   font-size: calc(30px + 1vw);
+}
+.about-alan-text {
+  width: 80%;
+  text-align: left;
+  margin: 0 auto;
+  font-family: Vegur, "PT Sans", Verdana, sans-serif;
+  font-size: 1.7rem;
+  font-weight: 500;
+  color: black;
+  line-height: 2;
+}
+.about-alan-text::first-letter {
+  font-size: 2.7rem;
 }
