--- a/src/stylesheets/Aboutme.css
+++ b/src/stylesheets/Aboutme.css
@@ -8,12 +8,30 @@
 
 .aboutme-content {
   display: flex;
-  background: rgba(152, 255, 152, 1);
+  flex-direction: row;
+  background: rgba(152, 255, 152, 0.249);
   align-items: center;
   margin: 0 auto;
   margin-bottom: 6rem;
   width: 90%;
   border-radius: 15px;
+}
+@media (max-width: 768px) {
+  .aboutme-content {
+    flex-direction: column;
+  }
+  .aboutme-content .img-alan {
+    float: none;
+    margin-bottom: 1rem;
+  }
+  .aboutme-content .picture-name {
+    max-width: 100%;
+  }
+  .aboutme-content .text-container {
+    text-align: center;
+    margin-left: 2rem;
+    padding-bottom: 1rem;
+  }
 }
 
 .picture-name {
@@ -33,12 +51,14 @@
   float: right;
   margin-left: 6rem;
 }
+@import url("https://fonts.googleapis.com/css2?family=Abel&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .about-alan {
   text-align: center;
-  font-family: Vegur, "PT Sans", Verdana, sans-serif;
+  font-family: "Abel", sans-serif;
   font-weight: 600;
+  font-style: normal;
 
-  font-size: calc(30px + 1vw);
+  font-size: calc(40px + 1vw);
 }
 .about-alan-text {
   width: 80%;
@@ -52,4 +72,27 @@
 }
 .about-alan-text::first-letter {
   font-size: 2.7rem;
+}
+.img-poem-1 {
+  width: 100%;
+}
+.img-poems-container {
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
+}
+.img-poem-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(152, 255, 152, 0.249);
+  width: 35rem;
+}
+.caption {
+  color: #888;
 }
