--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -58,7 +58,7 @@
   color: rgb(44, 44, 44);
   /* Comentarios mantenido */
 }
-@media screen and (min-width: 350px) {
+@media screen and (max-width: 320px) {
   .bienvenida,
   .alan,
   .poetry,
@@ -73,7 +73,7 @@
 
   .alan-poetry {
     width: 91%;
-    font-size: calc(36px + 1vw);
+    font-size: calc(37px + 1vw);
     /* Ajusta el valor según tus necesidades */
   }
 }
@@ -127,6 +127,15 @@
 @media screen and (max-width: 900px) {
   .div-circular {
     display: none;
+  }
+  .contenedor-bienvenida {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .contenedor-bienvenida .socials-contenedor {
+    padding-left: 0;
   }
   /* .contenedor-bienvenida{
             padding-left: 17%;
