--- a/src/stylesheets/footer.css
+++ b/src/stylesheets/footer.css
@@ -6,5 +6,5 @@
   padding-bottom: 6rem;
   font-family: "Consolas", "Courier New", "Lucida Console", Monaco, monospace;
   height: 7em;
-  background-color: black;
+  background-color: rgb(39, 38, 38);
 }
